Load weather data and write results into json file

--- a/.env.example
+++ b/.env.example
@@ -1,51 +1,10 @@
-# Configuration for E-Paper Dashboard
-# Copy this file to .env and fill in your values
-
-# ============================================
-# Display Hardware
-# ============================================
 DISPLAY_WIDTH=800
 DISPLAY_HEIGHT=480
-# Options: epd7in5, epd7in5_V2, epd7in5b_V2
-WAVESHARE_VERSION=epd7in5_V2
 
-# ============================================
-# Location (for weather and sunrise/sunset)
-# ============================================
-LATITUDE=52.5200
-LONGITUDE=13.4050
+LOCATION_LAT=47.6634
+LOCATION_LON=9.1755
 
-# ============================================
-# Weather Provider (choose one)
-# ============================================
+TIMEZONE=Europe/Berlin
+
+# possible values: brightsky
 WEATHER_PROVIDER=brightsky
-
-# Brightsky (DWD - Germany)
-BRIGHTSKY_USER_AGENT=your@email.com
-
-# OpenWeatherMap
-# WEATHER_PROVIDER=openweathermap
-# OPENWEATHERMAP_API_KEY=your_api_key_here
-
-# ============================================
-# Calendar Provider (optional)
-# ============================================
-# CALENDAR_PROVIDER=ics
-# ICS_URL=https://calendar.google.com/calendar/ical/...
-
-# ============================================
-# Language & Locale
-# ============================================
-LANG=de_DE.UTF-8
-
-# ============================================
-# Cache Settings
-# ============================================
-CACHE_TTL_WEATHER=3600
-CACHE_TTL_CALENDAR=3600
-
-# ============================================
-# Logging
-# ============================================
-# Options: DEBUG, INFO, WARNING, ERROR
-LOG_LEVEL=INFO
