Add alert provider

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,7 @@ TIMEZONE=Europe/Berlin
 # possible values: brightsky
 WEATHER_PROVIDER=brightsky
 
+# possible values: brightsky
+ALERT_PROVIDER=brightsky
+
 TEMPLATE=template-01.svg
