Add date time provider

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ LOCATION_LAT=47.6634
 LOCATION_LON=9.1755
 
 TIMEZONE=Europe/Berlin
+LOCALE=de_DE.UTF-8
 
 # possible values: brightsky
 WEATHER_PROVIDER=brightsky
