--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,12 @@ requires-python = ">=3.12"
 dependencies = [
     "requests>=2.32.5",
     "python-dotenv>=1.2.1",
+    "astral>=3.2"
 ]
 
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["dashboard*"]
