--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ requires-python = ">=3.12"
 dependencies = [
     "requests>=2.32.5",
     "python-dotenv>=1.2.1",
-    "astral>=3.2"
+    "astral>=3.2",
+    "cairosvg>=2.7.0",
+    "pillow>=10.0.0",
 ]
 
 [build-system]
