--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "astral>=3.2",
     "cairosvg>=2.7.0",
     "pillow>=10.0.0",
-    "spidev>=3.6",
+    "spidev>=3.8",
+    "gpiozero>=2.0.1",
+    "rpi-lgpio>=0.4",
 ]
 
 [build-system]
